--- a/src/app/user-registration-form/user-registration-form.component.html
+++ b/src/app/user-registration-form/user-registration-form.component.html
@@ -7,7 +7,7 @@
       <mat-form-field>
         <input
           matInput
-          [(ngModel)]="userData.username"
+          [(ngModel)]="userData.Username"
           placeholder="Username"
           type="text"
           name="Username"
@@ -17,7 +17,7 @@
         <mat-form-field>
         <input
           matInput
-          [(ngModel)]="userData.password"
+          [(ngModel)]="userData.Password"
           type = "password"
           placeholder="Password"
           name="Password"
@@ -27,7 +27,7 @@
       <mat-form-field>
         <input
           matInput
-          [(ngModel)]="userData.email"
+          [(ngModel)]="userData.Email"
           type = "email"
           placeholder="Email"
           name="Email"
@@ -37,7 +37,7 @@
       <mat-form-field>
         <input
           matInput
-          [(ngModel)]="userData.birthday"
+          [(ngModel)]="userData.Birthday"
           type = "date"
           placeholder="Birthday"  
           name="Birthday"
